--- a/book/book.css
+++ b/book/book.css
@@ -42,8 +42,8 @@ html {
   }
   
   .search_icon {
-      width: 5vh;
-      height: 5vh
+      width: 2vh;
+      height: 2vh;
   }
   
   footer {
