--- a/omok/omok.css
+++ b/omok/omok.css
@@ -57,3 +57,9 @@ html {
       width: 30px;
       height: 30px;
   }
+
+  #btn-container {
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+}
