--- a/resources/style/index.css
+++ b/resources/style/index.css
@@ -133,22 +133,22 @@ hr {
 }
 
 .interests>article {
-    height: 20vh;
+    height: 40vh;
     padding: 10px;
     margin-bottom: 10px;
     background-color: whitesmoke;
 }
 
 .likes-img {
-    height: 85%;
-    filter: grayscale(1);
+    height: 96%;
+    /* filter: grayscale(1); */
     background-size: cover;
     background-color: lightgrey;
 }
 
-.interests>article:hover .likes-img {
+/* .interests>article:hover .likes-img {
     filter: grayscale(0);
-}
+} */
 
 .interests>article>h6 {
     color: grey;
