--- a/resources/style/index.css
+++ b/resources/style/index.css
@@ -47,16 +47,24 @@ section::-webkit-scrollbar {
 }
 
 .projects div.backend, 
-.projects div.frontend 
+.projects div.frontend,
+.projects div.backend-mini
 {
     display: flex;
-    flex-wrap: wrap;
+    flex-flow: wrap column;
     gap: 10px;
+}
+
+.project-type {
+    font-weight: 800;
+    width: fit-content;
+    padding: 5px;
+    margin-bottom: 10px;
 }
 
 hr {
     width: 85%;
-    margin: 40px 0;
+    margin: 20px 0;
     border: dashed 1px whitesmoke;
 }
 
@@ -64,27 +72,28 @@ hr {
     gap: 10px;
 }
 
-.projects article {
+.article {
     width: 250px;
     height: 250px;
     padding: 10px;
+    padding-bottom: 30px;
     background-color: whitesmoke;
 }
 
-.projects article>h3,
-.projects article>h6,
-.projects article>div,
-.projects article>span {
+.article>h3,
+.article>h6,
+.article>div,
+.article>span {
     width: 100%;
     height: 25px;
     overflow-x: scroll;
     overflow-y: hidden;
 }
 
-.projects article>h3::-webkit-scrollbar,
-.projects article>h6::-webkit-scrollbar,
-.projects article>div::-webkit-scrollbar,
-.projects article>span::-webkit-scrollbar {
+.article>h3::-webkit-scrollbar,
+.article>h6::-webkit-scrollbar,
+.article>div::-webkit-scrollbar,
+.article>span::-webkit-scrollbar {
     display: none;
 }
 
@@ -95,12 +104,27 @@ hr {
     background-color: lightgrey;
 }
 
-.projects article:hover {
+.article:hover {
     border-bottom: solid 2px #f797c7;
 }
 
-.projects article:hover .project-img {
+.article:hover .project-img {
     filter: grayscale(0);
+}
+
+.detail-article {
+    width: 500px;
+    background-color: rgb(252, 252, 252);
+    margin: 0 20px;
+    padding: 20px;
+}
+
+.detail-article p {
+    margin: 15px 0;
+}
+
+.detail-content {
+    font-weight: 300;
 }
 
 .skills {
@@ -260,7 +284,7 @@ address {
         order: -1;
     }
 
-    .projects article,
+    .article,
     .interests>article {
         width: 85vw;
         height: 70vw;
