--- a/resources/style/index.css
+++ b/resources/style/index.css
@@ -76,7 +76,8 @@ hr {
     width: 200px;
     height: 250px;
     padding: 10px;
-    padding-bottom: 120px;
+    /*이거 바꾸면 article 아래 크기 길어짐*/
+    padding-bottom: 300px;
     background-color: whitesmoke;
 }
 
@@ -85,7 +86,7 @@ hr {
 .article>div,
 .article>span {
     width: 100%;
-    height: 30px;
+    height: 40px;
     overflow-x: scroll;
     overflow-y: hidden;
 }
@@ -114,10 +115,11 @@ hr {
 
 .detail-article {
     width: 450px;
-    background-color: rgb(252, 252, 252);
+    background-color: rgb(249, 249, 249);
     margin: 0 20px;
     padding: 20px;
     margin-bottom: 20px;
+    min-height: 77vh;
 }
 
 .detail-article p {
@@ -130,10 +132,9 @@ hr {
 
 .skills {
     display: flex;
-    align-items: center;
 }
 
-.skills>span {
+.skillSpan {
     color: rgb(0, 0, 0);
     font-size: 0.8em;
     border: none;
@@ -231,6 +232,12 @@ footer ul {
 address {
     color: lightgrey;
     text-align: center;
+}
+
+.skill-level {
+    display: inline-block;
+    margin-left: 10px;
+    color: #FFD700; /* gold color */
 }
 
 
