--- a/resources/style/index.css
+++ b/resources/style/index.css
@@ -7,6 +7,14 @@
     font-family: 'Noto Sans KR', sans-serif;
 }
 
+body {
+    height: 100vh;
+}
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
 a {
     color: grey;
     /* text-decoration: none; */
@@ -19,15 +27,16 @@ a {
 .container {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 150px 70vh;
+    grid-template-rows: 130px 70vh;
     width: 90%;
-    height: 90vh;
+    height: 80%;
     margin: auto;
 }
 
 .contents {
     display: grid;
-    grid-template-columns: 270px 3fr 1fr;
+    grid-template-columns: 1fr 3fr 1fr;
+    height: 80vh;
     gap: 10px;
 }
 
@@ -35,21 +44,52 @@ section {
     overflow-y: scroll;
 }
 
-section::-webkit-scrollbar {
+.interests::-webkit-scrollbar,
+.profile-section::-webkit-scrollbar {
     display: none;
 }
 
+/* 전체 스크롤바 스타일 */
+.projects::-webkit-scrollbar {
+    width: 12px;
+    /* 세로 스크롤바의 너비 */
+    height: 12px;
+    /* 가로 스크롤바의 높이 */
+}
+
+/* 스크롤바 트랙 스타일 */
+.projects::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    /* 트랙의 배경색 */
+    border-radius: 10px;
+    /* 트랙의 모서리 둥글게 */
+}
+
+/* 스크롤바 핸들 스타일 */
+.projects::-webkit-scrollbar-thumb {
+    background: #888;
+    /* 핸들의 배경색 */
+    border-radius: 10px;
+    /* 핸들의 모서리 둥글게 */
+}
+
+/* 스크롤바 핸들에 호버 시 스타일 */
+.projects::-webkit-scrollbar-thumb:hover {
+    background: #555;
+    /* 호버 시 핸들의 배경색 */
+}
+
+
 
 .profile>img {
-    width: 70%;
+    width: 50%;
     padding: 10px;
     background-color: whitesmoke;
 }
 
-.projects div.backend, 
+.projects div.backend,
 .projects div.frontend,
-.projects div.backend-mini
-{
+.projects div.backend-mini {
     display: flex;
     flex-flow: wrap column;
     gap: 10px;
@@ -73,7 +113,7 @@ hr {
 }
 
 .article {
-    width: 200px;
+    width: 25%;
     height: 250px;
     padding: 10px;
     /*이거 바꾸면 article 아래 크기 길어짐*/
@@ -185,7 +225,6 @@ header {
     align-items: end;
     border-bottom: solid 3px whitesmoke;
     padding: 10px 0;
-    padding-top: 100px;
     margin-bottom: 20px;
 }
 
@@ -210,7 +249,7 @@ ul {
 
 li {
     padding: 5px 0;
-    font-size: 0.9em;
+    font-size: 0.8em;
 }
 
 footer {
@@ -218,10 +257,10 @@ footer {
     flex-direction: column;
     justify-content: space-around;
     width: 100vw;
-    height: 150px;
-    background-color: whitesmoke;
+    height: 100px;
     font-size: 0.8em;
-    margin-top: 20px;
+    background-color: whitesmoke;
+    margin: 20vh 0;
 }
 
 footer ul {
@@ -237,9 +276,152 @@ address {
 .skill-level {
     display: inline-block;
     margin-left: 10px;
-    color: #FFD700; /* gold color */
+    color: #FFD700;
+    /* gold color */
 }
 
+.toast-button-container {
+    display: flex;
+    flex-flow: wrap row;
+    justify-content: space-between;
+    align-items: center;
+    width: 76%;
+    padding-top: 10px;
+}
+
+button {
+    border: none;
+    width: fit-content;
+    height: fit-content;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 0.7em;
+}
+
+.toast-modal {
+    visibility: hidden;
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(51, 51, 51, 0.9);
+    color: #fff;
+    padding: 16px;
+    border-radius: 4px;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+    width: 50%;
+    z-index: 9999;
+}
+
+.toast-modal.show {
+    visibility: visible;
+    opacity: 1;
+    transform: translate(-50%, -20px);
+}
+
+.toast-content {
+    display: flex;
+    align-items: center;
+    height: 27vh;
+}
+
+#skills-modal {
+    width: 50vw;
+    height: 70vh;
+}
+
+.toast-content > span {
+    padding-left: 10%;
+    font-size: 1.2em;
+}
+
+.toast-ul {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-left: 20%;
+    font-size: 1.2em;
+}
+
+.skill-toast-ul > div > ul {
+    font-size: 0.9em;
+}
+
+.skill-toast-ul {
+    display: flex;
+    flex-flow: wrap row;
+    padding-left: 4%;
+    padding-top: 2%;
+    font-size: 1.2em;
+}
+
+.skill-toast-ul > div {
+    width: 31%;
+    padding: 2% 1%;
+}
+
+#skill-info {
+    font-size: 0.7em;
+    padding-left: 20%;
+}
+
+
+.toast-ul > li {
+    padding: 3% 0;
+}
+
+.close-toast {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    cursor: pointer;
+    font-size: 20px;
+    color: #fff;
+}
+
+.project-modal {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.project-modal.show {
+  opacity: 1;
+}
+
+.project-modal-content {
+  position: absolute;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  padding: 20px;
+  width: 300px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  opacity: 0;
+  transform: translateY(-20px);
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.project-modal.show .project-modal-content {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.close-project-modal {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+}
 
 @media screen and (max-width : 760px) {
 
